--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,3 +1,11 @@
+cache:
+  paths:
+    -.m2/repository
+
+varaibles:
+  MAVEN_OPTS: "Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
+
+
 stages:
   - build
   - test
