--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -3,7 +3,7 @@ cache:
     - .m2/repository
 
 varaibles:
-  MAVEN_OPTS: "Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
+  MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
 
 
 stages:
