--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,3 +1,13 @@
+variables:
+  MAVEN_OPTS: "-Djava.awt.headless=true -Dmaven.repo.local=./.m2/repository"
+  MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
+
+cache:
+  paths:
+    - ./.m2/repository
+  # keep cache across branch
+  key: "$CI_BUILD_REF_NAME"
+
 stages:
   - build
   - test
@@ -5,7 +15,8 @@ stages:
 build-job:
   image: maven:3.8.3-openjdk-17
   stage: build
-  script: "mvn clean package -B"
+  script: 
+    - "mvn clean compile $MAVEN_CLI_OPTS"
   artifacts:
     paths:
       - target/*.jar
@@ -13,7 +24,8 @@ build-job:
 test-job:
   image: maven:3.8.3-openjdk-17
   stage: test
-  script: "mvn test"
+  script: 
+    - "mvn package $MAVEN_CLI_OPTS"
   artifacts:
     paths:
       - target/*.jar
