--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,13 +1,3 @@
-variables:
-  MAVEN_OPTS: "-Djava.awt.headless=true -Dmaven.repo.local=./.m2/repository"
-  MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
-
-cache:
-  paths:
-    - ./.m2/repository
-  # keep cache across branch
-  key: "$CI_BUILD_REF_NAME"
-
 stages:
   - build
   - test
@@ -16,7 +6,7 @@ build-job:
   image: maven:3.8.3-openjdk-17
   stage: build
   script: 
-    - "mvn clean compile $MAVEN_CLI_OPTS"
+    - "mvn clean package -B"
   artifacts:
     paths:
       - target/*.jar
@@ -25,7 +15,7 @@ test-job:
   image: maven:3.8.3-openjdk-17
   stage: test
   script: 
-    - "mvn package $MAVEN_CLI_OPTS"
+    - "mvn test"
   artifacts:
     paths:
       - target/*.jar
