--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-job:
   image: maven:3.8.3-openjdk-17
   stage: build
   script: 
-    - "mvn -f backend package -B"
+    - "mvn -f backend compile"
   artifacts:
     paths:
       - backend/target/*.jar
