--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,56 @@
-version: '3'
+version: "3"
 services:
 
   fiber-billing-db:
     image: "postgres:14.4-alpine"
-    container_name: "fiber-billing-db"
-    healthcheck:
-      test: ["CMD", "pg_isready", "-q", "-d", "postgres", "-U", "root" ]
-      interval: 10s
-      timeout: 40s
-      retries: 10
+    restart: unless-stopped
     volumes:
-      - fiber-billing-data:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
       - ./db:/docker-entrypoint-initdb.d/
+    environment:
+      POSTGRES_DB: ${POSTGRESQL_DB}
+      POSTGRES_USER: ${POSTGRESQL_USER}
+      POSTGRES_PASSWORD: ${POSTGRESQL_PASS}
+      APP_DB_USER: ${APP_DB_USER}
+      APP_DB_NAME: ${APP_DB_NAME}
+      APP_DB_PASS: ${APP_DB_PASS}
     ports:
       - 5432:5432
+    
+  fiber-billing-keycloak:
+    image: "jboss/keycloak:16.1.1"
+    restart: unless-stopped
     environment:
-      - POSTGRES_HOST_AUTH_METHOD=trust
-      - APP_DB_NAME=fiber-billing
-      - APP_DB_USER=fiber-billing
-      - APP_DB_PASSWORD=fiber-billing
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=password
+      DB_VENDOR: POSTGRES
+      DB_ADDR: fiber-billing-db
+      DB_DATABASE: ${POSTGRESQL_DB}
+      DB_USER: ${POSTGRESQL_USER}
+      DB_PASSWORD: ${POSTGRESQL_PASS}
+    ports:
+      - 28080:8080
+    depends_on:
+      - fiber-billing-db
 
   fiber-billing-backend:
     build: ./backend
-    container_name: fiber-billing-backend
+    restart: unless-stopped
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://fiber-billing-db:5432/fiber-billing
       - SPRING_DATASOURCE_USERNAME=fiber-billing
       - SPRING_DATASOURCE_PASSWORD=fiber-billing
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
     ports:
-      - 8080:8080
+      - 8000:8000
     depends_on:
-      - fiber-billing-db 
+      - fiber-billing-db
 
   fiber-billing-frontend:
     build: ./frontend
-    container_name: fiber-billing-frontend
     ports:
       - 4200:80
     depends_on:
       - fiber-billing-backend
 
 volumes:
-  fiber-billing-data:
+  data:
+    driver: local
