--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ POSTGRESQL_DB=keycloak
 APP_DB_NAME=fiber-billing
 APP_DB_USER=fiber-billing
 APP_DB_PASS=fiber-billing
+
+KEYCLOAK_USER=admin
+KEYCLOAK_PASSWORD=password
