--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "element-plus": "^2.2.9",
     "pinia": "^2.0.14",
+    "quasar": "^2.7.5",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
@@ -21,8 +21,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
-    "unplugin-auto-import": "^0.9.2",
-    "unplugin-vue-components": "^0.21.1",
+    "sass": "^1.32.12",
     "vite": "^2.9.12"
   }
 }
