--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@quasar/extras": "^1.14.3",
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
     "quasar": "^2.7.5",
@@ -15,6 +16,7 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.0.10",
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
