Add ci for frontend

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
 backend:
   trigger:
-    include: backend/.gitlab-ci.yml 
+    include: backend/.gitlab-ci.yml
+
+frontend:
+  trigger:
+    include: frontend/.gitlab-ci.yml
