--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -2,5 +2,6 @@ build site:
   image: node:lts-alpine
   stage: build
   script:
+    - cd frontend
     - npm install --progress=false
     - npm run build
