--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# Server settings
 server.port=8000
+server.tomcat.relaxed-query-chars=|,{,},[,]
+# Spring settings
+# Debug
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format-sql=true
+server.error.include-message=always
+spring.sql.init.mod=always
+spring.sql.init.schema-locations=classpath:db/schema-*.sql
+logging.level.org.springframework.web=debug
+# Datasource settings - DEV
+spring.datasource.url=jdbc:postgresql://localhost:5432/fiber-billing
+spring.datasource.username=fiber-billing
+spring.datasource.password=fiber-billing
+
+## DEV ONLY - change to 'validate' on prod
+spring.jpa.hibernate.ddl-auto=update
+##
+
+allowedApi=http://localhost:3000
