--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format-sql=true
 server.error.include-message=always
 spring.sql.init.mod=always
-spring.sql.init.schema-locations=classpath:db/schema-*.sql
+#spring.sql.init.schema-locations=classpath:db/schema-*.sql
 logging.level.org.springframework.web=debug
 # Datasource settings - DEV
-spring.datasource.url=jdbc:postgresql://localhost:5432/fiber-billing
+#spring.datasource.url=jdbc:postgresql://localhost:5432/fiber-billing
 spring.datasource.username=fiber-billing
 spring.datasource.password=fiber-billing
 
@@ -19,4 +19,4 @@ spring.datasource.password=fiber-billing
 spring.jpa.hibernate.ddl-auto=update
 ##
 
-allowedApi=http://localhost:3000
+allowedApi=http://localhost:4200
