--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@quasar/extras": "^1.14.3",
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^2.1.0",
     "quasar": "^2.7.5",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
