--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,10 @@ server.tomcat.relaxed-query-chars=|,{,},[,]
 # Spring settings
 # Debug
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.globally_quoted_identifiers=tru
 spring.jpa.properties.hibernate.format-sql=true
 server.error.include-message=always
 spring.sql.init.mod=always
@@ -16,7 +19,7 @@ spring.datasource.username=fiber-billing
 spring.datasource.password=fiber-billing
 
 ## DEV ONLY - change to 'validate' on prod
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 ##
 
 allowedApi=http://localhost:4200
