BSFI-34 AddressRepository and ClientTypeRepository Tests

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format-sql=true
 server.error.include-message=always
 spring.sql.init.mod=always
-spring.sql.init.schema-locations=classpath:db/schema-*.sql
+#spring.sql.init.schema-locations=classpath:db/schema-*.sql
 logging.level.org.springframework.web=debug
 # Datasource settings - DEV
 spring.datasource.url=jdbc:postgresql://localhost:5432/fiber-billing
@@ -16,7 +16,7 @@ spring.datasource.username=fiber-billing
 spring.datasource.password=fiber-billing
 
 ## DEV ONLY - change to 'validate' on prod
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 ##
 
 allowedApi=http://localhost:4200
