BSFI-42 Code cleanup

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.username=fiber-billing
 spring.datasource.password=fiber-billing
 
 ## DEV ONLY - change to 'validate' on prod
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 ##
 
 allowedApi=http://localhost:4200
