Fixed merge issues

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.username=fiber-billing
 spring.datasource.password=fiber-billing
 
 ## DEV ONLY - change to 'validate' on prod
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 ##
 
 allowedApi=http://localhost:4200
